got it working again - vanila code

--- a/llamas/config
+++ b/llamas/config
@@ -1,30 +1,39 @@
-VERSION = 1.0
-HOST = '0.0.0.0'
-PORT = 1991
-#Timeoutout in secondes per each HTTP REQUEST to offshore APIs that this
-#server makes per each endpoint.
-TIMEOUT = 1
-DEBUG = True
-PEDANTIC_INIT = True
+NETLINK_FAMILY_NAME = 'genz_cmd'
+VERSION = 1
 
-HTTP_HEADERS = {
-    'Accept' : 'Content-Type: application/json; charset=utf-8; version=1.0',
-    'Access-Control-Allow-Origin' : '*'
+_prefix = 'GENZ_A_'
+""" A message model that will be sent over the Netlink..
+ <required>
+"""
+MSG_MODEL = (
+            ('UnUsed',            'none'),
+            (_prefix + 'GCID',    'uint32'),
+            (_prefix + 'CCLASS',  'uint16'),
+            (_prefix + 'UUID',    'string')   # bytearray not supported
+        )
+
+ADD = 'GENZ_C_ADD_COMPONENT'
+REMOVE = 'GENZ_C_REMOVE_COMPONENT'
+SYMLINK = 'GENZ_C_SYMLINK_COMPONENT'
+
+""" Kernel event indices.
+ Commands are matched from kern_recv.c::struct genl_ops genz_gnl_ops.
+ Kernel convention is not to use zero as an index or base value.
+ <required>
+"""
+CMD_OPTS = {
+    ADD: 1,
+    REMOVE: 2,
+    SYMLINK: 3
 }
 
-#Allow generating Random data when can't ping offshore API.
-# ALLOW_SPOOF = False
-
-_base_url = 'http://localhost:1234/'
-ENDPOINTS = {
-    'base' : _base_url,
-    'event_add' : 'add/subscribe',
-    'systems' : 'Systems',
-    'registries' : 'Registries'
+""" The set of all command numbers and their associated message structures.
+ This is the analog of the kernel 'struct genl_ops'.
+ Setting values to None will assume a MSG_MODEL for that key.
+ <required>
+"""
+CMD_MODEL = {
+    CMD_OPTS[ADD]: None,
+    CMD_OPTS[REMOVE]: None,
+    CMD_OPTS[SYMLINK]: None
 }
-
-"""
-[optional] Time in seconds to wait to check for ENPOINTS' 'event_*' subscribtion
-if failed to subscribe/ping endpoint on this server's start.
-"""
-SUBSCRIBE_INTERVAL = 2
