checkpoint: netlink netsted working draft

--- a/llamas/alpaka.cfg
+++ b/llamas/alpaka.cfg
@@ -2,15 +2,20 @@ NETLINK_FAMILY_NAME = 'genz_cmd'
 VERSION = 1
 
 _prefix = 'GENZ_A_'
+
+
 """
  A message model that will be sent over the Netlink..
  <required>
 """
 _msg_model = (
             ('UnUsed',            'none'),
+            (_prefix + 'FABRIC_NUM',    'uint32'),
             (_prefix + 'GCID',    'uint32'),
             (_prefix + 'CCLASS',  'uint16'),
-            (_prefix + 'UUID',    'string')   # bytearray not supported
+            (_prefix + 'FRU_UUID',    'string'),
+            (_prefix + 'MGR_UUID',    'string'),
+            (_prefix + 'RESOURCE_LIST', 'bsstuff'),
         )
 
 ADD = 'GENZ_C_ADD_COMPONENT'
@@ -24,9 +29,9 @@ SYMLINK = 'GENZ_C_SYMLINK_COMPONENT'
  <required>
 """
 CMD_OPTS = {
-    ADD: 1,
-    REMOVE: 2,
-    SYMLINK: 3
+    ADD: 0,
+    REMOVE: 1,
+    SYMLINK: 2
 }
 
 """
