checkpoint: memory region list draft

--- a/llamas/alpaka.cfg
+++ b/llamas/alpaka.cfg
@@ -1,8 +1,9 @@
+from llamas.message_model import MessageModel
+
 NETLINK_FAMILY_NAME = 'genz_cmd'
 VERSION = 1
 
 _prefix = 'GENZ_A_'
-
 
 """
  A message model that will be sent over the Netlink..
@@ -15,8 +16,39 @@ _msg_model = (
             (_prefix + 'CCLASS',  'uint16'),
             (_prefix + 'FRU_UUID',    'string'),
             (_prefix + 'MGR_UUID',    'string'),
-            (_prefix + 'RESOURCE_LIST', 'bsstuff'),
+            (_prefix + 'RESOURCE_LIST', 'resources'),
         )
+
+_m = {
+    'Message': (
+        ('UnUsed',            'none'),
+        ('GENZ_A_FABRIC_NUM',    'uint32'),
+        ('GENZ_A_GCID',    'uint32'),
+        ('GENZ_A_CCLASS',  'uint16'),
+        ('GENZ_A_FRU_UUID',    'string'),
+        ('GENZ_A_MGR_UUID',    'string'),
+        ('GENZ_A_RESOURCE_LIST', 'resources'),
+    ),
+
+    'resources': (
+        ('GENZ_A_UL_UNSPEC', 'none'),
+        ('GENZ_A_U_UUID', 'string'),
+        ('GENZ_A_U_CLASS', 'uint16'),
+        ('GENZ_A_U_MRL', 'mrl'),
+    ),
+
+    'mrl': (
+        ('GENZ_A_MR_UNSPEC', 'none'),
+        ('GENZ_A_MR_START', 'uint64'),
+        ('GENZ_A_MR_LENGTH', 'uint64'),
+        ('GENZ_A_MR_TYPE', 'uint8'),
+        ('GENZ_A_MR_RO_RKEY', 'uint32'),
+        ('GENZ_A_MR_RW_RKEY', 'uint32'),
+    ),
+
+}
+
+MODEL = MessageModel
 
 ADD = 'GENZ_C_ADD_COMPONENT'
 REMOVE = 'GENZ_C_REMOVE_COMPONENT'
