checkpoint: building add message from request body

--- a/llamas/alpaka.cfg
+++ b/llamas/alpaka.cfg
@@ -1,4 +1,6 @@
-from llamas.message_model import MessageModel
+from llamas.message_model.add_component import ModelAddComponent
+
+ADD_JSON_PATH = './message_model/add.json'
 
 NETLINK_FAMILY_NAME = 'genz_cmd'
 VERSION = 1
@@ -48,7 +50,7 @@ _m = {
 
 }
 
-MODEL = MessageModel
+MODEL = ModelAddComponent
 
 ADD = 'GENZ_C_ADD_COMPONENT'
 REMOVE = 'GENZ_C_REMOVE_COMPONENT'
