enable event subscribtion

--- a/llamas/llamas.cfg
+++ b/llamas/llamas.cfg
@@ -15,10 +15,11 @@ HTTP_HEADERS = {
 #Allow generating Random data when can't ping offshore API.
 # ALLOW_SPOOF = False
 
-ENDPOINTS_BASE = 'http://localhost:1234/redfish/v1/'
+ENDPOINTS_BASE = 'http://localhost:1234/'
 ENDPOINTS = {
     'base' : ENDPOINTS_BASE,
-    'events' : 'EventService',
-    'systems' : 'Systems',
-    'registries' : 'Registries'
+    'event_add_cmp' : ENDPOINTS_BASE + 'add/subscribe'
+    # 'events' : 'EventService',
+    # 'systems' : 'Systems',
+    # 'registries' : 'Registries'
 }
