checkppoint: a working example of sending propper uuid via netlink

--- a/llamas/alpaka.cfg
+++ b/llamas/alpaka.cfg
@@ -34,7 +34,8 @@ _m = {
 
     'resources': (
         ('GENZ_A_UL_UNSPEC', 'none'),
-        ('GENZ_A_U_UUID', 'string'),
+        ('GENZ_A_U_CLASS_UUID', 'string'),
+        ('GENZ_A_U_INSTANCE_UUID', 'string'),
         ('GENZ_A_U_CLASS', 'uint16'),
         ('GENZ_A_U_MRL', 'mrl'),
     ),
@@ -46,7 +47,7 @@ _m = {
         ('GENZ_A_MR_TYPE', 'uint8'),
         ('GENZ_A_MR_RO_RKEY', 'uint32'),
         ('GENZ_A_MR_RW_RKEY', 'uint32'),
-    ),
+    )
 
 }
 
