--- a/llamas/llamas.cfg
+++ b/llamas/llamas.cfg
@@ -15,6 +15,10 @@ HTTP_HEADERS = {
 #Allow generating Random data when can't ping offshore API.
 # ALLOW_SPOOF = False
 
+# Hostname of This LLamas server to callback to. If None, systme "hostname" will
+# be used instead.
+THIS_HOSTNAME = None
+
 ENDPOINTS_BASE = 'http://localhost:1234/'
 ENDPOINTS = {
     'base' : ENDPOINTS_BASE,
