--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 libnl >= 0.2.0
 flask_fat @ git+https://github.com/ProjectVellum/flask-api-template.git@v0.1.2
-python3-alpaka @ git+https://github.hpe.com/atsugami-kun/python3-alpaka.git@zach_dev
+python3-alpaka @ git+https://github.com/linux-genz/python3-alpaka.git@zach_dev
