zephyr and llamas are communicating
Signed-off-by: Jim Hull <jmhull@intelliprop.com>

--- a/llamas/alpaka.conf
+++ b/llamas/alpaka.conf
@@ -13,7 +13,7 @@ _prefix = 'GENZ_A_'
 """
 _msg_model = (
             ('UnUsed',            'none'),
-            (_prefix + 'FABRIC_NUM',    'uint32'),
+            (_prefix + 'BRIDGE_GCID',    'uint32'),
             (_prefix + 'GCID',    'uint32'),
             (_prefix + 'CCLASS',  'uint16'),
             (_prefix + 'FRU_UUID',    'string'),
@@ -24,7 +24,6 @@ _msg_model = (
 _m = {
     'Message': (
         ('UnUsed',            'none'),
-        ('GENZ_A_FABRIC_NUM',    'uint32'),
         ('GENZ_A_GCID',    'uint32'),
         ('GENZ_A_CCLASS',  'uint16'),
         ('GENZ_A_FRU_UUID',    'string'),
