--- a/llamas/server.conf
+++ b/llamas/server.conf
@@ -1,7 +1,7 @@
 VERSION = 1.0
 HOST = '0.0.0.0'
 PORT = 1991
-#Timeout in secondes per each HTTP REQUEST to offshore APIs that this
+#Timeout in seconds per each HTTP REQUEST to offshore APIs that this
 #server makes per each endpoint.
 TIMEOUT = 1
 DEBUG = False
@@ -15,14 +15,14 @@ HTTP_HEADERS = {
 #Allow generating Random data when can't ping offshore API.
 # ALLOW_SPOOF = False
 
-# Hostname of This LLamas server to callback to. If None, systme "hostname" will
+# Hostname of This LLamas server to callback to. If None, system "hostname" will
 # be used instead.
 THIS_HOSTNAME = 'http://localhost'
 
-ENDPOINTS_BASE = 'http://localhost:1234/'
+ENDPOINTS_BASE = 'http://localhost:2021/'
 ENDPOINTS = {
     'base' : ENDPOINTS_BASE,
-    'event_add_cmp' : ENDPOINTS_BASE + 'resource/subscribe'
+    'event_add_cmp' : ENDPOINTS_BASE + 'subscribe/add_event'
     # 'events' : 'EventService',
     # 'systems' : 'Systems',
     # 'registries' : 'Registries'
