Added flags field to add_component
This change requires a compatible version of zephyr and genz subsystem.

Signed-off-by: Jim Hull <jmhull@intelliprop.com>

--- a/llamas/alpaka.conf
+++ b/llamas/alpaka.conf
@@ -35,6 +35,7 @@ _m = {
         ('GENZ_A_UL_UNSPEC', 'none'),
         ('GENZ_A_U_CLASS_UUID', 'string'),
         ('GENZ_A_U_INSTANCE_UUID', 'string'),
+        ('GENZ_A_U_FLAGS', 'uint64'),
         ('GENZ_A_U_CLASS', 'uint16'),
         ('GENZ_A_U_MRL', 'mrl'),
     ),
