Device remove and cuuid/serial
Signed-off-by: Jim Hull <jmhull@intelliprop.com>

--- a/llamas/alpaka.conf
+++ b/llamas/alpaka.conf
@@ -18,16 +18,21 @@ _msg_model = (
             (_prefix + 'CCLASS',  'uint16'),
             (_prefix + 'FRU_UUID',    'string'),
             (_prefix + 'MGR_UUID',    'string'),
+            (_prefix + 'CUUID',       'string'),
+            (_prefix + 'SERIAL',      'uint64'),
             (_prefix + 'RESOURCE_LIST', 'resources'),
         )
 
 _m = {
     'Message': (
         ('UnUsed',            'none'),
+        ('GENZ_A_BRIDGE_GCID',    'uint32'),
         ('GENZ_A_GCID',    'uint32'),
         ('GENZ_A_CCLASS',  'uint16'),
         ('GENZ_A_FRU_UUID',    'string'),
         ('GENZ_A_MGR_UUID',    'string'),
+        ('GENZ_A_CUUID',       'string'),
+        ('GENZ_A_SERIAL',      'uint64'),
         ('GENZ_A_RESOURCE_LIST', 'resources'),
     ),
 
