--- a/llamas/server.conf
+++ b/llamas/server.conf
@@ -22,7 +22,8 @@ THIS_HOSTNAME = 'http://localhost'
 ENDPOINTS_BASE = 'http://localhost:2021/'
 ENDPOINTS = {
     'base' : ENDPOINTS_BASE,
-    'event_add_cmp' : ENDPOINTS_BASE + 'subscribe/add_event'
+    'event_add_cmp' : ENDPOINTS_BASE + 'subscribe/add_event',
+    'event_remove_cmp' : ENDPOINTS_BASE + 'subscribe/remove_event'
     # 'events' : 'EventService',
     # 'systems' : 'Systems',
     # 'registries' : 'Registries'
