Zeroconf, multi-bridge, and zephyr subscribe changes
Requires a compatible zephyr version.

Signed-off-by: Jim Hull <jmhull@intelliprop.com>

--- a/llamas/alpaka.conf
+++ b/llamas/alpaka.conf
@@ -1,4 +1,5 @@
 from llamas.message_model.add_component import ModelAddComponent
+from llamas.message_model.local_bridge import ModelLocalBridge
 
 ADD_JSON_PATH = './message_model/add.json'
 
@@ -8,7 +9,7 @@ VERSION = 1
 _prefix = 'GENZ_A_'
 
 """
- A message model that will be sent over the Netlink..
+ Add/Remove message model that will be sent over Netlink.
  <required>
 """
 _msg_model = (
@@ -21,6 +22,21 @@ _msg_model = (
             (_prefix + 'CUUID',       'string'),
             (_prefix + 'SERIAL',      'uint64'),
             (_prefix + 'RESOURCE_LIST', 'resources'),
+        )
+
+"""
+ Local bridge message model that will be sent over Netlink.
+ <required>
+"""
+_fc_prefix = _prefix + 'FC_'
+_br_msg_model = (
+            ('UnUsed',                      'none'),
+            (_fc_prefix + 'GCID',           'uint32'),
+            (_fc_prefix + 'BRIDGE_GCID',    'uint32'),
+            (_fc_prefix + 'TEMP_GCID',      'uint32'),
+            (_fc_prefix + 'DR_GCID',        'uint32'),
+            (_fc_prefix + 'DR_INTERFACE',   'uint16'),
+            (_fc_prefix + 'MGR_UUID',       'string'),
         )
 
 _m = {
@@ -56,10 +72,9 @@ _m = {
 
 }
 
-MODEL = ModelAddComponent
-
 ADD = 'GENZ_C_ADD_COMPONENT'
 REMOVE = 'GENZ_C_REMOVE_COMPONENT'
+LOCAL_BRIDGE = 'GENZ_C_ADD_FABRIC_COMPONENT'
 SYMLINK = 'GENZ_C_SYMLINK_COMPONENT'
 
 """
@@ -71,7 +86,8 @@ SYMLINK = 'GENZ_C_SYMLINK_COMPONENT'
 CMD_OPTS = {
     ADD: 0,
     REMOVE: 1,
-    SYMLINK: 2
+    SYMLINK: 2,
+    LOCAL_BRIDGE: 4
 }
 
 """
@@ -83,7 +99,8 @@ CMD_OPTS = {
 CMD_MODEL = {
     CMD_OPTS[ADD]: _msg_model,      #1
     CMD_OPTS[REMOVE]: _msg_model,   #2
-    CMD_OPTS[SYMLINK]: _msg_model   #3
+    CMD_OPTS[SYMLINK]: _msg_model,  #3
+    CMD_OPTS[LOCAL_BRIDGE]: _br_msg_model   #4
 }
 #LLaMaS Properties
 
