--- a/llamas/server.conf
+++ b/llamas/server.conf
@@ -1,6 +1,9 @@
 VERSION = 1.0
 HOST = '0.0.0.0'
-PORT = 1991
+# dynamic port assignment
+PORT = 0
+# previous fixed port
+#PORT = 1991
 #Timeout in seconds per each HTTP REQUEST to offshore APIs that this
 #server makes per each endpoint.
 TIMEOUT = 1
@@ -15,16 +18,16 @@ HTTP_HEADERS = {
 #Allow generating Random data when can't ping offshore API.
 # ALLOW_SPOOF = False
 
-# Hostname of This LLamas server to callback to. If None, system "hostname" will
+# Hostname of This LLaMaS server to callback to. If None, system "hostname" will
 # be used instead.
-THIS_HOSTNAME = 'http://localhost'
+#THIS_HOSTNAME = 'http://localhost'
 
-ENDPOINTS_BASE = 'http://localhost:2021/'
+# Where the FM listens for llamas subscribe requests
+FM_SUBSCRIBE = 'subscribe/llamas'
+
+# Where our callback endpoints are located
 ENDPOINTS = {
-    'base' : ENDPOINTS_BASE,
-    'event_add_cmp' : ENDPOINTS_BASE + 'subscribe/add_event',
-    'event_remove_cmp' : ENDPOINTS_BASE + 'subscribe/remove_event'
-    # 'events' : 'EventService',
-    # 'systems' : 'Systems',
-    # 'registries' : 'Registries'
+    'add' : 'api/v1/device/add',
+    'remove' : 'api/v1/device/remove',
+    'local_bridge' : 'api/v1/device/local_bridge',
 }
