Support "reference_uuid" resource keyword
Signed-off-by: Jim Hull <jmhull@intelliprop.com>

--- a/llamas/server.conf
+++ b/llamas/server.conf
@@ -30,4 +30,6 @@ ENDPOINTS = {
     'add' : 'api/v1/device/add',
     'remove' : 'api/v1/device/remove',
     'local_bridge' : 'api/v1/device/local_bridge',
+    'unreach_res' : 'api/v1/device/unreach_res',
+    'relocate' : 'api/v1/device/relocate',
 }
