--- a/llamas/alpaka.conf
+++ b/llamas/alpaka.conf
@@ -59,6 +59,7 @@ _m = {
         ('GENZ_A_U_FLAGS', 'uint64'),
         ('GENZ_A_U_CLASS', 'uint16'),
         ('GENZ_A_U_MRL', 'mrl'),
+        ('GENZ_A_U_REFERENCE_UUID', 'string'),
     ),
 
     'mrl': (
